<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/textViewTitre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titre"
                android:textSize="18sp"
                android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewComic"
            android:layout_width="wrap_content"
            android:maxHeight="250dp"
            android:maxWidth="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitre"
            app:layout_constraintLeft_toLeftOf="@+id/textViewTitre"
            app:srcCompat="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/Synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:maxWidth="150dp"
            android:text="@string/synopsis"
            android:textAlignment="viewStart"
            android:textSize="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/imageViewComic" />

            <TextView
                android:id="@+id/textViewInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/info"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintLeft_toLeftOf="@+id/textViewTitre"
                app:layout_constraintTop_toBottomOf="@id/imageViewComic" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            app:layout_constraintTop_toBottomOf="@id/textViewInfo"/>

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/price"
            app:layout_constraintTop_toBottomOf="@id/textViewDate"/>

        <TextView
            android:id="@+id/textViewNbPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/nbPages"
            app:layout_constraintLeft_toRightOf="@id/textViewPrice"
            app:layout_constraintTop_toTopOf="@id/textViewPrice"/>

        <TextView
            android:id="@+id/textViewDiamondCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/diamondcode"
            app:layout_constraintLeft_toRightOf="@id/textViewNbPage"
            app:layout_constraintTop_toTopOf="@id/textViewPrice"/>

            <TextView
                android:id="@+id/textViewCredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/credits"
                app:layout_constraintLeft_toLeftOf="@id/textViewTitre"
                app:layout_constraintTop_toBottomOf="@id/textViewDiamondCode" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>